# workplace_extractor

./: .gitignore  LICENSE.txt  README.md  analise.py  app.py  config.ini  get_group_ids.py  get_member_ids.py  get_node_posts.py  main.py  pyproject.toml  setup.py  setup2.py
workplace_extractor/: Counter.py  Extractor.py  __init__.py  extract.py  get_group_ids.py  get_member_ids.py  get_node_posts.py  miscelaneous.py  sharepoint.py
workplace_extractor/Extractors/: CommentExtractor.py  EventExtractor.py  FeedExtractor.py  GroupExtractor.py  InteractionExtractor.py  PersonExtractor.py  PollExtractor.py  PostExtractor.py  __init__.py
workplace_extractor/Nodes/: Author.py  Event.py  Feed.py  Group.py  Interaction.py  Node.py  NodeCollection.py  Poll.py  Post.py  __init__.py
