[tool.poetry]
name = "workplace_extractor"
version = "0.9.3"
description = "Extract data created in a corporate Workplace by Facebook installation using the Graph/SCIM APIs"
license = "MIT"
authors = ["Denis Duarte <den.duarte@gmail.com>",]
readme = "README.md"
repository = "https://github.com/denisduarte/workplace_extractor"
keywords = ["extractor", "workplace"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
numpy = "^1.20"
pandas = "^1.2"
aiohttp = "^3.7"
asyncio = "^3.4"
networkx = "^2.5.1"
matplotlib = "^3.4.2"
scipy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
